--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>AXONOMETRIC 2D</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">
+<script src="js/lib/renderer.js"></script>
+<script src="js/lib/eventsHandler.js"></script>
+<script src="js/lib/geometry.js"></script>
+<script src="js/lib/tile.js"></script>
+<script src="js/lib/vec3.js"></script>
+<script src="js/lib/level.js"></script>
+<script src="js/lib/map3d.js"></script>
 <script src="js/main.js"></script>
 
 </head>
 
 <body>
-  <canvas id="renderCanvas"></canvas>
 </body>
 
 </html>
