--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>AXONOMETRIC 2D</title>
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <script src="js/lib/renderer.js"></script>
+<script src="js/lib/renderLoop.js"></script>
 <script src="js/lib/eventsHandler.js"></script>
 <script src="js/lib/geometry.js"></script>
 <script src="js/lib/tile.js"></script>
